can play a shanghi game, defaults and home page set up, totals set up as well

--- a/templates/shanghigames/index.html
+++ b/templates/shanghigames/index.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 {% if game.done == 0 %}
-<form action="/{{ game.id }}" method="post">{% csrf_token %}
+<form action="{{ game.id }}" method="post">{% csrf_token %}
   {{ form.as_p }}
   <input type="submit" value="Submit" />
 </form>
