--- a/templates/shanghigames/index.html
+++ b/templates/shanghigames/index.html
@@ -1,8 +1,7 @@
 {% extends "base.html" %}
-
 {% block content %}
 {% if game.done == 0 %}
-<form action="/{{ game.id }}" method="post">{% csrf_token %}
+<form action="{{ game.id }}" method="post">{% csrf_token %}
   {{ form.as_p }}
   <input type="submit" value="Submit" />
 </form>
