playing with django

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,6 @@
 
 {% block content %}
   <h1> Hello World!</h1>
-  <a href="shanghigames/1">Test Game</a>
+  <a href="shanghigame/1">Test Game</a>
 {% endblock %}
 </table>
