bootstrap working when hardcoded

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,10 +3,41 @@
 <head>
   <link rel="stylesheet" href="css/style.css">
   <title>{% block title %} Darts Site yo {% endblock %}</title>
+  <link href="/static/css/bootstrap.css" rel="stylesheet">
+  <link href="/static/css/bootstrap-responsive.css" rel="stylesheet">
 </head>
 <body>
   <div id="content">
     {% block content %}{% endblock %}
   </div>
+
+
+    <!-- Le javascript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+<!-- jQuery via Google + local fallback, see h5bp.com -->
+	  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+  	<script>window.jQuery || document.write('<script src="/static/js/jquery-1.7.1.min.js"><\/script>')</script>
+
+<!-- Bootstrap JS: compiled and minified -->
+    <script src="/static/js/bootstrap.min.js"></script>
+
+<!-- Example plugin: Prettify -->
+    <script src="/static/js/prettify/prettify.js"></script>
+    
+<!-- Initialize Scripts -->
+		<script>
+			// Activate Google Prettify in this page
+			addEventListener('load', prettyPrint, false);
+		
+			$(document).ready(function(){
+
+				// Add prettyprint class to pre elements
+					$('pre').addClass('prettyprint');
+								
+			}); // end document.ready
+		</script>
+
+
 </body>
 </html>
