--- a/templates/base.html
+++ b/templates/base.html
@@ -40,10 +40,15 @@
                 </ul>
                 </li> -->
             </ul>
-			  <form class="navbar-form pull-right">
-              <input class="span2" type="text" placeholder="Email">
-              <input class="span2" type="password" placeholder="Password">
+            {% if request.user.is_authenticated %}
+            <form action="/logout" method="post" class="navbar-form pull-right">{% csrf_token %}
+            <button type="submit" class="btn">Logout</button>
+            {% else %}
+            <form action="/login" method="post" class="navbar-form pull-right">{% csrf_token %}
+              <input class="span2" name="username" id="username" type="text" placeholder="Username">
+              <input class="span2" name="password" id="password" type="password" placeholder="Password">
               <button type="submit" class="btn">Sign in</button>
+           {% endif %}
             </form>
           </div><!--/.nav-collapse -->
         </div><!-- /.navbar-inner -->
