undo last move and accuracies

--- a/templates/base.html
+++ b/templates/base.html
@@ -23,8 +23,8 @@
           <!-- Responsive Navbar Part 2: Place all navbar contents you want collapsed withing .navbar-collapse.collapse. -->
           <div class="nav-collapse collapse">
             <ul class="nav">
-              <li><a href="roster.html">Roster</a></li>
-              <li><a href="results.html">Results</a></li>
+              <li><a href="/shanghigames/1">Create a Game</a></li>
+              <li><a href="stats">Stats</a></li>
               <!-- Read about Bootstrap dropdowns at http://twitter.github.com/bootstrap/javascript.html#dropdowns -->
               <!-- Dropdown
                 <li class="dropdown">
@@ -55,13 +55,9 @@
       </div><!-- /.navbar -->
     </div><!-- /.container -->
 
-
-
-  <div id="content">
+  <div class="container" id="content">
     {% block content %}{% endblock %}
   </div>
-
-
     <!-- Le javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
