--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -1852,15 +1852,14 @@ legend + .control-group {
 
 .form-horizontal .control-label {
   float: left;
-  width: 160px;
   padding-top: 5px;
-  text-align: right;
+  text-align: left;
 }
 
 .form-horizontal .controls {
   *display: inline-block;
-  *padding-left: 20px;
-  margin-left: 180px;
+   padding-left: 80px;
+  *margin-left: 190;
   *margin-left: 0;
 }
 
@@ -5923,4 +5922,13 @@ a.badge:hover {
 /* Offset the responsive button for proper vertical alignment */
 .navbar .btn-navbar {
   margin-top: 10px;
+}
+
+#content{
+    background: rgba(255, 255, 255, .45);
+    border-bottom-right-radius: 15px;
+		border-bottom-left-radius: 15px;
+    min-height: 600px;
+    padding-bottom: 40px;
+
 }
