--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
           <!-- Responsive Navbar Part 2: Place all navbar contents you want collapsed withing .navbar-collapse.collapse. -->
           <div class="nav-collapse collapse">
             <ul class="nav">
-              <li><a href="/shanghigames/1">Create a Game</a></li>
+              <li><a href="/creategame/">Create a Game</a></li>
               <li><a href="stats">Stats</a></li>
               <!-- Read about Bootstrap dropdowns at http://twitter.github.com/bootstrap/javascript.html#dropdowns -->
               <!-- Dropdown
