start of saturday

--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li><a href="/creategame/">Create a Game</a></li>
-              <li><a href="stats">Stats</a></li>
+              <li><a href="/stats/">Stats</a></li>
               <!-- Read about Bootstrap dropdowns at http://twitter.github.com/bootstrap/javascript.html#dropdowns -->
               <!-- Dropdown
                 <li class="dropdown">
