--- a/templates/stats.html
+++ b/templates/stats.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="span2">
-  <h2> Highest Score </h1>
+<div class="span3">
+  <h2> High Score </h2>
   <table class="table">
     <th> Player </th>
     <th> Score </th>
-  {% for row in high_score %}
+  {% for row in high_score%}
     <tr>
     {% for c in row %}
     <td> {{ c }} </td>
@@ -13,4 +13,33 @@
   </tr>
   {% endfor %}
 </table>
+</div>
+<div class="span3">
+<h2> Average Score </h2>
+  <table class="table">
+    <th> Player </th>
+    <th> Score </th>
+  {% for row in average_score%}
+    <tr>
+    {% for c in row %}
+    <td> {{ c }} </td>
+    {% endfor %}
+  </tr>
+  {% endfor %}
+</table>
+</div>
+<div class="span3">
+<h2> Total Points</h2>
+  <table class="table">
+    <th> Player </th>
+    <th> Score </th>
+  {% for row in total_points%}
+    <tr>
+    {% for c in row %}
+    <td> {{ c }} </td>
+    {% endfor %}
+  </tr>
+  {% endfor %}
+</table>
+</div>
 {% endblock %}
