got rid of test game link

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,6 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <h1> Hello World!</h1>
-  <a href="shanghigames/1">Test Game</a>
+  <h1> 53 Packard Darts.  It's on.</h1>
 {% endblock %}
 </table>
