added fifth player

--- a/templates/creategame.html
+++ b/templates/creategame.html
@@ -37,8 +37,8 @@
     <label class="control-label pull-left" for="player1">Player 3</label>
     <div class="controls">
       <select id="player3" name="player3" class="span2">
-        {% for p in player_list %}
          <option value=""> </option>
+        {% for p in player_list %}
         <option value="{{ p.id }} "> {{ p.first_name }} {{ p.last_name }}</option>
         {% endfor %}
       </select>
@@ -49,6 +49,17 @@
     <label class="control-label pull-left" for="player4">Player 4</label>
     <div class="controls">
       <select id="player4" name="player4" class="span2">
+          <option value=""> </option>
+        {% for p in player_list %}
+        <option value="{{ p.id }} "> {{ p.first_name }} {{ p.last_name }}</option>
+        {% endfor %}
+      </select>
+    </div>
+  </div>
+ <div class="control-group pull-left">
+    <label class="control-label pull-left" for="player5">Player 4</label>
+    <div class="controls">
+      <select id="player5" name="player5" class="span2">
           <option value=""> </option>
         {% for p in player_list %}
         <option value="{{ p.id }} "> {{ p.first_name }} {{ p.last_name }}</option>
