changed scores to radio buttons

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
   <title>{% block title %} Darts Site yo {% endblock %}</title>
   <link href="/static/css/bootstrap.css" rel="stylesheet">
   <link href="/static/css/bootstrap-responsive.css" rel="stylesheet">
+  <link href="/static/css/style.css" rel="stylesheet">
 </head>
 <body>
     <!-- NAVBAR
