--- a/templates/stats.html
+++ b/templates/stats.html
@@ -29,11 +29,59 @@
 </table>
 </div>
 <div class="span3">
-<h2> Accuracy </h2>
+<h2> Total Points</h2>
   <table class="table">
     <th> Player </th>
     <th> Score </th>
+  {% for row in total_points%}
+    <tr>
+    {% for c in row %}
+    <td> {{ c }} </td>
+    {% endfor %}
+  </tr>
+  {% endfor %}
+</table>
+</div>
+
+<div class="span3">
+<h2> Accuracy </h2>
+  <table class="table">
+    <th> Player </th>
+    <th> Accuracy </th>
   {% for row in average_accuracy %}
+    <tr>
+    {% for c in row %}
+    <td> {{ c }} </td>
+    {% endfor %}
+  </tr>
+  {% endfor %}
+</table>
+</div>
+
+<div class="span3">
+<h2> Hits (Not Bulls) </h2>
+  <table class="table">
+    <th> Player </th>
+    <th> Dart </th>
+    <th> Game </th>
+  {% for row in total_hits%}
+    <tr>
+    {% for c in row %}
+    <td> {{ c }} </td>
+    {% endfor %}
+  </tr>
+  {% endfor %}
+</table>
+</div>
+
+
+<div class="span3">
+<h2> Bullseyes </h2>
+  <table class="table">
+    <th> Player </th>
+    <th> Per Game</th>
+    <th> Total </th>
+  {% for row in total_bulls%}
     <tr>
     {% for c in row %}
     <td> {{ c }} </td>
@@ -47,7 +95,8 @@
 <h2> Singles </h2>
   <table class="table">
     <th> Player </th>
-    <th> Score </th>
+    <th> Average </th>
+    <th> Total </th>
   {% for row in total_singles%}
     <tr>
     {% for c in row %}
@@ -61,6 +110,7 @@
 <h2> Doubles </h2>
   <table class="table">
     <th> Player </th>
+    <th> Average </th>
     <th> Score </th>
   {% for row in total_doubles%}
     <tr>
@@ -75,22 +125,9 @@
 <h2> Triples </h2>
   <table class="table">
     <th> Player </th>
+    <th> Average </th>
     <th> Score </th>
   {% for row in total_triples%}
-    <tr>
-    {% for c in row %}
-    <td> {{ c }} </td>
-    {% endfor %}
-  </tr>
-  {% endfor %}
-</table>
-</div>
-<div class="span3">
-<h2> Total Points</h2>
-  <table class="table">
-    <th> Player </th>
-    <th> Score </th>
-  {% for row in total_points%}
     <tr>
     {% for c in row %}
     <td> {{ c }} </td>
