corrected label for doubles and triples

--- a/templates/stats.html
+++ b/templates/stats.html
@@ -111,7 +111,7 @@
   <table class="table">
     <th> Player </th>
     <th> Average </th>
-    <th> Score </th>
+    <th> Total </th>
   {% for row in total_doubles%}
     <tr>
     {% for c in row %}
@@ -126,7 +126,7 @@
   <table class="table">
     <th> Player </th>
     <th> Average </th>
-    <th> Score </th>
+    <th> Total </th>
   {% for row in total_triples%}
     <tr>
     {% for c in row %}
