--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="icon" href="/static/img/hoof.jpg"></link>
   <title>{% block title %} Darts Site yo {% endblock %}</title>
   <link href="/static/css/bootstrap.css" rel="stylesheet">
   <link href="/static/css/bootstrap-responsive.css" rel="stylesheet">
