dartsicon to 3 darts

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,7 @@
 <!-- DOCTYPE HTML5 -->
 <html>
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <link rel="stylesheet" href="css/style.css">
   <link rel="shortcut icon" href="/static/img/dartsicon.jpg"></link>
   <title>{% block title %} Darts Site yo {% endblock %}</title>
