added a notloggedin page

--- a/templates/notloggedin.html
+++ b/templates/notloggedin.html
@@ -1,4 +1,4 @@
-{% extends base.html %}
+{% extends "base.html" %}
 {% block content %}
 You are not logged in.  You must be logged in to create a game. <Br />
 Your username is your first name, all lowercase.
