--- a/templates/base.html
+++ b/templates/base.html
@@ -27,6 +27,7 @@
             <ul class="nav">
               <li><a href="/creategame/">Create a Game</a></li>
               <li><a href="/stats/">Stats</a></li>
+              <li><a href="/previousgames/">Previous Games</a></li>
               <!-- Read about Bootstrap dropdowns at http://twitter.github.com/bootstrap/javascript.html#dropdowns -->
               <!-- Dropdown
                 <li class="dropdown">
