--- a/templates/shanghigame.html
+++ b/templates/shanghigame.html
@@ -57,16 +57,17 @@
   </div>
   <input type="submit" value="Submit" />
 </form>
+{% else %}
 <div class="span2">
 <form action="/shanghigames/undo/{{ game.id }}">
   <input type="submit" value="Undo Last Throw" />
 </form>
-</div>
 {% endif %}
+</div>
 <table class="table">
   <th> Round </th>
   {% for p in player_list %}
-  <th>{{ p.player.first_name }} {{ p.total }} {{ p.accuracy }} </th>
+  <th>{{ p.player.first_name }}</th>
   {% endfor %}
 {% for row in matrix%}
    <tr>
