--- a/templates/history.html
+++ b/templates/history.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
 {% for a in all_games %}
-  <a href="/shanghigames/{{ a.id }}">{{ a.name }}</a>
+<a href="/shanghigames/{{ a.id }}">{{ a.name }}</a><br />
   {% endfor %}
   {% endblock %}
