--- a/templates/shanghigame.html
+++ b/templates/shanghigame.html
@@ -6,6 +6,7 @@
 <h1> Round: {{ game.current_round }}</h1>
 {% endif %}
 <h1> Player: {{ current_player.player.first_name }} </h1>
+{{ game.done }}
 {% if game.done == 0 %}
 
 <div class="span6">
@@ -62,6 +63,7 @@
   <input type="submit" value="Undo Last Throw" />
 </form>
 </div>
+{% else %}
 {% endif %}
 <table class="table">
   <th> Round </th>
