sort by winning percentage, then games, then wins, then loses

--- a/templates/stats.html
+++ b/templates/stats.html
@@ -5,6 +5,7 @@
   <table class="table">
     <th> Player </th>
     <th> Games </th>
+    <th> Win Percentage </th>
     <th> Wins </th>
     <th> Loses </th>
   {% for row in total_wins %}
