--- a/templates/shanghigame.html
+++ b/templates/shanghigame.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
+{% block error %}{% endblock %}
 {%if game.current_round == 21 %}
 <h1> Round: Bullseyes </h1>
 {% else %}
