--- a/templates/history.html
+++ b/templates/history.html
@@ -1,6 +1,13 @@
 {% extends "base.html" %}
 {% block content %}
-{% for a in all_games %}
-<a href="/shanghigames/{{ a.id }}">{{ a.name }}</a><br />
+<table class="table span6">
+  <th> Game </th>
+  <th> Winner </th>
+  {% for a in all_games %}
+    <tr>
+      <td> <a href="/shanghigames/{{ a.id }}">{{ a.name }}</a></td>
+      <td> {{ a.winner.first_name }}</td>
+    </tr>
   {% endfor %}
-  {% endblock %}
+</table>
+{% endblock %}
