--- a/templates/history.html
+++ b/templates/history.html
@@ -3,10 +3,12 @@
 <table class="table span6">
   <th> Game </th>
   <th> Winner </th>
+  <th> Day </th>
   {% for a in all_games %}
     <tr>
       <td> <a href="/shanghigames/{{ a.id }}">{{ a.name }}</a></td>
       <td> {{ a.winner.first_name }}</td>
+      <td> {{ a.gametime}} </td>
     </tr>
   {% endfor %}
 </table>
