added gametime to shanghigame

--- a/templates/history.html
+++ b/templates/history.html
@@ -3,7 +3,7 @@
 <table class="table span6">
   <th> Game </th>
   <th> Winner </th>
-  <th> Day </th>
+  <th> Date </th>
   {% for a in all_games %}
     <tr>
       <td> <a href="/shanghigames/{{ a.id }}">{{ a.name }}</a></td>
