--- a/templates/history.html
+++ b/templates/history.html
@@ -6,13 +6,13 @@
   <th> Date </th>
   {% for a in all_games %}
     <tr>
-      <td> <a href="/shanghigames/{{ a.id }}">{{ a.name }}</a></td>
-      <td> 
-        {{ a.winner.first_name }}
+      <td>
+        <a href="/shanghigames/{{ a.id }}">{{ a.name }}</a>
         {% if not game.done %}
           (Not Finished)
         {% endif %}
       </td>
+      <td> {{ a.winner.first_name }}</td>
       <td> {{ a.gametime.month }}/{{ a.gametime.day }}/{{ a.gametime.year }} </td>
     </tr>
   {% endfor %}
