--- a/templates/history.html
+++ b/templates/history.html
@@ -8,7 +8,7 @@
     <tr>
       <td>
         <a href="/shanghigames/{{ a.id }}">{{ a.name }}</a>
-        {% if not game.done %}
+        {% if not a.done %}
           (Not Finished)
         {% endif %}
       </td>
