--- a/templates/shanghigame.html
+++ b/templates/shanghigame.html
@@ -61,10 +61,13 @@
       <input type="radio" name="triples" id="triples3" value=3> 3
     </label>
   </div>
-  <input type="submit" value="Submit" />
+  <input type="submit" value="Undo" />
 </form>
 <div class="span2">
-</div>
+    <form action="undo/{{ game.id }}" method="post" class="span4 ">{% csrf_token %}
+      <input type="submit" value="Submit" />
+    </form>
+  </div>
 {% endif %}
 <table class="table">
   <th> Round </th>
