--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <link rel="shortcut icon" href="/static/img/dartsicon.jpg"></link>
-  <title>{% block title %} Darts Site yo {% endblock %}</title>
+  <title>{% block title %} 53 Packard Darts {% endblock %}</title>
   <link href="/static/css/bootstrap.css" rel="stylesheet">
   <link href="/static/css/bootstrap-responsive.css" rel="stylesheet">
   <link href="/static/css/style.css" rel="stylesheet">
@@ -11,37 +11,20 @@
 <body>
     <!-- NAVBAR
     ================================================== -->
-    <!-- Wrap the .navbar in .container to center it on the page and provide easy way to target it with .navbar-wrapper. -->
 <div class="container navbar-wrapper">
       <div class="navbar navbar-inverse">
         <div class="navbar-inner">
-          <!-- Responsive Navbar Part 1: Button for triggering responsive navbar (not covered in tutorial). Include responsive CSS to utilize. -->
           <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
           <a class="brand" href="/">Home</a>
-          <!-- Responsive Navbar Part 2: Place all navbar contents you want collapsed withing .navbar-collapse.collapse. -->
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li><a href="/creategame/">Create a Game</a></li>
               <li><a href="/stats/">Stats</a></li>
               <li><a href="/previousgames/">Previous Games</a></li>
-              <!-- Read about Bootstrap dropdowns at http://twitter.github.com/bootstrap/javascript.html#dropdowns -->
-              <!-- Dropdown
-                <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-                <ul class="dropdown-menu">
-                  <li><a href="#">Action</a></li>
-                  <li><a href="#">Another action</a></li>
-                  <li><a href="#">Something else here</a></li>
-                  <li class="divider"></li>
-                  <li class="nav-header">Nav header</li>
-                  <li><a href="#">Separated link</a></li>
-                  <li><a href="#">One more separated link</a></li>
-                </ul>
-                </li> -->
             </ul>
             {% if request.user.is_authenticated %}
             <form action="/logout" method="post" class="navbar-form pull-right">{% csrf_token %}
@@ -58,6 +41,7 @@
       </div><!-- /.navbar -->
     </div><!-- /.container -->
 
+  <!-- Container for main content -->
   <div class="container" id="content">
     {% block content %}{% endblock %}
   </div>
