--- a/templates/creategame.html
+++ b/templates/creategame.html
@@ -1,4 +1,6 @@
 {% extends "base.html" %}
+
+{% block title %}Create A Game{% endblock %}
 {% block content %}
 <h1>
 <form action="makenewgame" method="post" class="form-horizontal pull-left span3">{% csrf_token %}
@@ -9,6 +11,7 @@
     </div>
   </div>
  
+ <!-- Player 1 -->
  <div class="control-group pull-left">
     <label class="control-label pull-left" for="player1">Player 1</label>
     <div class="controls">
@@ -21,6 +24,7 @@
   </div>
 
   
+ <!-- Player 2 -->
   <div class="control-group pull-left">
     <label class="control-label pull-left" for="player2">Player 2</label>
     <div class="controls">
@@ -33,6 +37,7 @@
   </div>
   
 
+ <!-- Player 3 -->
   <div class="control-group pull-left">
     <label class="control-label pull-left" for="player1">Player 3</label>
     <div class="controls">
@@ -45,6 +50,7 @@
     </div>
   </div>
   
+ <!-- Player 4 -->
  <div class="control-group pull-left">
     <label class="control-label pull-left" for="player4">Player 4</label>
     <div class="controls">
@@ -56,6 +62,8 @@
       </select>
     </div>
   </div>
+
+ <!-- Player 5 -->
  <div class="control-group pull-left">
     <label class="control-label pull-left" for="player5">Player 5</label>
     <div class="controls">
