--- a/templates/shanghigame.html
+++ b/templates/shanghigame.html
@@ -14,6 +14,7 @@
 {% endif %}
 <h1> Player: {{ current_player.player.first_name }} </h1>
 
+<!-- Start of entering score -->
 <div class="span6">
 <form action="{{ game.id }}" method="post" class="span4 score_option score_form">{% csrf_token %}
   <div class="span4 score_option">
@@ -63,6 +64,10 @@
   </div>
   <input type="submit" value="Submit" />
 </form>
+<!-- End of entering score -->
+
+
+<!-- Start of score -->
 <div class="span2">
     <form action="undo/{{ game.id }}" method="post" class="span4 ">{% csrf_token %}
       <input type="submit" value="Undo" />
@@ -82,4 +87,5 @@
   </tr>
 {% endfor %}
 </table>
+<!-- End of score -->
 {% endblock %}
