--- a/templates/player.html
+++ b/templates/player.html
@@ -11,7 +11,7 @@
     
     var data = { values:[
       {% for x in scores %}
-      { X: {{ x.0 }}, Y: {{ x.1 }}},
+      { X: {{ x.0.date.year }}, Y: {{ x.1 }}},
       {% endfor %}
     ]};
 
