--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
   <link href="/static/css/bootstrap.css" rel="stylesheet">
   <link href="/static/css/bootstrap-responsive.css" rel="stylesheet">
   <link href="/static/css/style.css" rel="stylesheet">
+  {% block head %}{% endblock %}
 </head>
 <body>
     <!-- NAVBAR
