made player graphs 300x300

--- a/templates/base.html
+++ b/templates/base.html
@@ -24,9 +24,9 @@
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li><a href="/creategame/">Create a Game</a></li>
-              <li><a href="/stats/">Stats</a></li>
               <li><a href="/previousgames/">Previous Games</a></li>
-              <li><a href="/player/">My Stats</a></li>
+              <li><a href="/stats/">Stats</a></li>
+              <li><a href="/player/">My Progresion</a></li>
             </ul>
             {% if request.user.is_authenticated %}
             <form action="/logout" method="post" class="navbar-form pull-right">{% csrf_token %}
