--- a/templates/player.html
+++ b/templates/player.html
@@ -92,7 +92,9 @@ $(document).ready(function() {
 {% endblock %}
 
 {% block content %}
+<div class="span12">
   <h2>{{ player.first_name }}</h2>
   <canvas id="graph" width="400" height="400">   
   </canvas> 
+</div>
 {% endblock %}
